Changelog (English)
===================

1.3.3
Added xorg-fonts-misc package in Arch Linux GUI installation
Fixed dbus error for Debian/Ubuntu

1.3.2
Added support openSUSE installation
Improved Arch Linux mirrors settings
Updated BusyBox
Configuration file is updated only when the parameters are updated
Script linuxdeploy can now be run from Android console
Now can create a symbolic link to linuxdeploy in /system/bin (Settings -> Create symlink)
Notification of need to update the operating environment
Bugfix: wrong information size of image file in automatic calculation mode
Bugfix: crashes when VNC display not integer number

1.3.1
Added support Fedora installation
Improved Arch Linux locale support

1.3.0
Added support Arch Linux installation
Added automatic calculation of image size (90% of free space, but not more than 4095 MB)
Added subitem desktop environment "Other" (for manual settings)
Interface improvements

1.2.9
Bugfix: sudo, upstart, gnome-session, XKL_XMODMAP_DISABLE
Added support ext3 file system
Improved preferences organization
Improved automatic detection of file system
Optimize of making disk image file

1.2.8
Bugfix: problem installing BusyBox on some devices (error updating the operating environment)
Added support installation in directory
Added checking mount points before installation
Rebuilding image file at change the size
Improved custom mounting

1.2.7
Bugfix: incorrect startup GNOME session on Ubuntu
Added support X Window System (startup GUI over X server)
Added automatic DNS configuration
Added support Unity desktop environment

1.2.6
Bugfix: incorrect profile management
Added support Ubuntu installation
Added information of active Linux system in SysInfo
Improved wake lock

1.2.5
Added support for profiles
Added select file system
Added separate localization settings
Change TWM to XTerm

1.2.4
Added information of available mount points and partitions in SysInfo
Added ability to select and copy text in the main window (Android 3+)
