@@ -3,7 +3,8 @@ Changelog (English)
 
 1.3.3
 Added xorg-fonts-misc package in Arch Linux GUI installation
-Fixed dbus error for Debian/Ubuntu
+Bugfix: dbus error for Debian/Ubuntu
+Bugfix: update configuration file after change profile
 
 1.3.2
 Added support openSUSE installation
@@ -157,6 +158,7 @@ Updated list packages of base system installation
 1.3.3
 Добавлен пакет xorg-fonts-misc к установке GUI в Arch Linux
 Исправлена ошибка dbus в Debian/Ubuntu
+Исправлена ошибка обновления конфигурационного файла после смены профиля
 
 1.3.2
 Добавлена ​​поддержка установки openSUSE
